--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -754,11 +754,16 @@ button#calculate_again:hover {
 }
 
 #calculate_btn {
-
 	border: none;
 	position: relative;
 	z-index: 22;
 	padding: 0;
+    /* cursor: not-allowed; */
+	pointer-events: none;
+}
+
+.form_filled #calculate_btn{
+	pointer-events: all;
 }
 
 #calculate_btn span {
